--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.2.RELEASE'
+        springBootVersion = '1.5.19.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -26,4 +26,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jersey'
     implementation 'org.projectlombok:lombok:1.18.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.glassfish.jersey.test-framework:jersey-test-framework-core:2.24.1'
+    testImplementation 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.24.1'
 }
